Fixed dark mode in climate demo.

--- a/samples/dashboards/demos/climate/demo.css
+++ b/samples/dashboards/demos/climate/demo.css
@@ -26,7 +26,7 @@
     --color-text: #2f2b38;
 }
 
-.highcharts-dashboards.hd-dark-mode #kpi-layout {
+.hd-dashboards-wrapper.hd-dark-mode #kpi-layout {
     --color-axis-labels: #838394;
     --color-background: #0d0d0d;
     --color-pane: #20202c;
@@ -52,7 +52,7 @@
     --color-row2-background: #f7f7f7;
 }
 
-.highcharts-dashboards.hd-dark-mode #selection-grid {
+.hd-dashboards-wrapper.hd-dark-mode #selection-grid {
     --color-background: #20202c;
     --color-border: #4a4a53;
     --color-header-background: #0d0d0d;
@@ -78,7 +78,7 @@
     --color-thumb-line: #f7f7f7;
 }
 
-.highcharts-dashboards.hd-dark-mode #time-range-selector {
+.hd-dashboards-wrapper.hd-dark-mode #time-range-selector {
     --color-axis-labels: #e7e7ec;
     --color-background: #0d0d0d;
     --color-grid: #838394;
@@ -106,7 +106,7 @@
     --color-tooltip-background: #dadae2;
 }
 
-.highcharts-dashboards.hd-dark-mode #world-map {
+.hd-dashboards-wrapper.hd-dark-mode #world-map {
     --color-navigation: #20202b;
     --color-navigation-line: #646478;
     --color-navigation-text: #838393;
@@ -115,7 +115,7 @@
 @media (prefers-color-scheme: dark) {
     /* dark mode */
 
-    .highcharts-dashboards {
+    .hd-dashboards-wrapper {
         --color-dashboard: #46475d;
     }
 
@@ -165,11 +165,11 @@
  *
  * */
 
-.highcharts-dashboards.hd-dark-mode {
+.hd-dashboards-wrapper.hd-dark-mode {
     background-color: #46475d;
 }
 
-.highcharts-dashboards.hd-dark-mode .hd-edit-context-menu-btn {
+.hd-dashboards-wrapper.hd-dark-mode .hd-edit-context-menu-btn {
     filter: invert(1);
 }
 
@@ -554,7 +554,7 @@
 }
 
 /* Safari fix for manual dark mode */
-.highcharts-dashboards.hd-dark-mode #world-map .highcharts-series-1 .highcharts-data-label text {
+.hd-dashboards-wrapper.hd-dark-mode #world-map .highcharts-series-1 .highcharts-data-label text {
     paint-order: stroke;
     stroke-width: 2px;
 }
@@ -577,7 +577,7 @@
     color: #fff;
 }
 
-.hd-edit-enabled.highcharts-dashboards {
+.hd-edit-enabled.hd-dashboards-wrapper {
     background-color: rgba(36, 29, 58, 0.2);
 }
 
@@ -614,6 +614,6 @@
     background: #646479;
 }
 
-.highcharts-dashboards > .hd-edit-drop-pointer {
+.hd-dashboards-wrapper > .hd-edit-drop-pointer {
     background: #ff8d64;
 }
